# alfred-randomer

./: README.md  build.sh  generators.py  info.plist  main.py  pyproject.toml
src/: generators.py  main.py
