[tool.poetry]
name = "Randomer"
version = "1.4.0"
description = "Generate random values for different data types"
documentation = "https://github.com/fedecalendino/alfred-randomer/blob/main/README.md"
homepage = "https://github.com/fedecalendino/alfred-randomer"
license = "MIT"

authors = [
    "Fede Calendino <fede@calendino.com>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
alfred-pyflow = "latest"

[tool.poetry.dev-dependencies]
black = "22.10.0"
pyinstaller = "5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
